add High Score feature

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Bitter:400,700"
 		/>
+		<script
+			src="https://kit.fontawesome.com/29b275fb0c.js"
+			crossorigin="anonymous"
+		></script>
 
 		<link href="css/index.css" rel="stylesheet" type="text/css" />
 		<script src="index.js"></script>
@@ -34,23 +38,52 @@
 						<h1 id="equation"></h1>
 						<input id="user-input" type="number" />
 						<h4 class="score">Score: <span id="score"></span></h4>
+						<h5>
+							High Score: <span id="highScore" class="highest-score"></span>
+						</h5>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<!-- =============================================
-				Loading Transition
-			============================================== -->
-		<!-- <div id="loader-wrapper">
-			<div id="preloader_1">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-		</div> -->
+		<div class="sbuttons">
+			<a
+				href="https://github.com/codelikeagirl29"
+				target="_blank"
+				class="sbutton github"
+				tooltip="Github"
+				><i class="fab fa-github"></i
+			></a>
+
+			<a
+				href="https://facebook.com/codelikeagirl91"
+				target="_blank"
+				class="sbutton fb"
+				tooltip="Facebook"
+				><i class="fab fa-facebook-f"></i
+			></a>
+
+			<a
+				href="https://twitter.com/dev_lindseyk"
+				target="_blank"
+				class="sbutton twitt"
+				tooltip="Twitter"
+				><i class="fab fa-twitter"></i
+			></a>
+
+			<a
+				href="mailto:codelikeagirl91@gmail.com"
+				target="_blank"
+				class="sbutton gmail"
+				tooltip="Gmail"
+				><i class="fa-solid fa-envelope"></i
+			></a>
+
+			<a target="_blank" class="sbutton mainsbutton" tooltip="Share"
+				><i class="fa-solid fa-plus"></i
+			></a>
+		</div>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
