--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 		<title>10 Sec Maths Game</title>
 		<link
 			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+			integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+			crossorigin="anonymous"
 		/>
+		<link href="style.css" rel="stylesheet" type="text/css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Bitter:400,700"
@@ -27,7 +31,7 @@
 	<body>
 		<div class="main-page-wrapper">
 			<!-- /.theme-main-header -->
-			<div class="container mx-auto">
+			<div class="container-fluid mx-auto">
 				<div class="row">
 					<div class="theme-title text-center col-xs-12">
 						<h2>LET&apos;S PLAY!</h2>
@@ -41,6 +45,23 @@
 						<h5>
 							High Score: <span id="highScore" class="highest-score"></span>
 						</h5>
+					</div>
+					<div class="col-10 col-md-8">
+						<form class="py-3 text-center" id="numberLimit">
+							<input
+								id="numberInput"
+								type="number"
+								min="10"
+								max="50"
+								placeholder="Choose a number limit."
+							/>
+							<button type="submit" class="btn btn-primary btn-sm ml-1 ok">
+								OK
+							</button>
+							<p class="py-2">
+								Number Limit : <span id="currentLimit"> 10</span>
+							</p>
+						</form>
 					</div>
 				</div>
 			</div>
@@ -91,9 +112,10 @@
 			crossorigin="anonymous"
 		></script>
 
+		<!-- Latest compiled and minified JavaScript -->
 		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-			integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+			src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+			integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 			crossorigin="anonymous"
 		></script>
 	</body>
